# ai-rag-chatbot

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  guide.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  schemas.py
app/routers/: chat.py  health.py
app/services/: db.py  ollama_client.py
db/: init.sql
scripts/: load_test.py
tests/: test_chat.py
