[project]
name = "ai-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
